@@ -56,5 +56,7 @@ ENDIF(QNANHIBIT)
 ADD_LIBRARY(NrrdIO ${nrrdio_SRCS} )
 TARGET_LINK_LIBRARIES(NrrdIO ${ZLIB_LIBRARY} )
 
-INSTALL_TARGETS(/lib NrrdIO)
-INSTALL_FILES(/include/NrrdIO "(\\.h)$")
+INSTALL(TARGETS NrrdIO RUNTIME DESTINATION lib ARCHIVE DESTINATION lib COMPONENT runtime)
+INSTALL(TARGETS NrrdIO LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT development)
+FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+INSTALL(FILES ${files} DESTINATION include/cmtk/NrrdIO COMPONENT development)
