@@ -339,7 +339,8 @@ SET(dcmtk_SRCS
 ADD_LIBRARY(D4CMTK ${dcmtk_SRCS})
 TARGET_LINK_LIBRARIES(D4CMTK ${ZLIB_LIBRARY})
 
-INSTALL_TARGETS(/lib D4CMTK)
-INSTALL_FILES(/include/dcmtk "(\\.h)$")
-
-INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dicom.dic DESTINATION lib)
+INSTALL(TARGETS D4CMTK RUNTIME DESTINATION lib ARCHIVE DESTINATION lib COMPONENT runtime)
+INSTALL(TARGETS D4CMTK LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT development)
+FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*/*.h")
+INSTALL(FILES ${files} DESTINATION include/cmtk/dcmtk COMPONENT development)
+INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/dicom.dic DESTINATION lib COMPONENT runtime)
