@@ -61,7 +61,9 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 ADD_LIBRARY(mxml ${mxml_SRCS})
 TARGET_LINK_LIBRARIES(mxml)
 
-INSTALL_TARGETS(/lib mxml)
-INSTALL_FILES(/include/mxml "(\\.h)$")
+INSTALL(TARGETS mxml RUNTIME DESTINATION lib ARCHIVE DESTINATION lib COMPONENT runtime)
+INSTALL(TARGETS mxml LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT development)
+FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+INSTALL(FILES ${files} DESTINATION include/cmtk/mxml COMPONENT development)
 
 SET(MXML_LIBRARIES mxml)
