@@ -9,7 +9,9 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/zconf.in.h ${CMAKE_CURRENT_BINARY_DIR
 
 ADD_LIBRARY(cmtkZlib ${zlib_SRCS})
 
-INSTALL_TARGETS(/lib cmtkZlib)
-INSTALL_FILES(/include/zlib "(\\.h)$")
+INSTALL(TARGETS cmtkZlib RUNTIME DESTINATION lib ARCHIVE DESTINATION lib COMPONENT runtime)
+INSTALL(TARGETS cmtkZlib LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT development)
+FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+INSTALL(FILES ${files} DESTINATION include/cmtk/zlib COMPONENT development)
 
 SET(ZLIB_LIBRARY "cmtkZlib" CACHE STRING "Library to link for libz support" FORCE)
