@@ -36,6 +36,8 @@ IF(CMTK_LIBRARY_PROPERTIES)
     SET_TARGET_PROPERTIES(cmtkUnstable PROPERTIES ${CMTK_LIBRARY_PROPERTIES})
 ENDIF(CMTK_LIBRARY_PROPERTIES)
 
-IF(${CMTK_BUILD_SHARED_LIBS})
-    INSTALL(TARGETS cmtkUnstable LIBRARY DESTINATION bin)
-ENDIF(${CMTK_BUILD_SHARED_LIBS})
+INSTALL(TARGETS cmtkUnstable RUNTIME DESTINATION lib ARCHIVE DESTINATION lib COMPONENT runtime)
+INSTALL(TARGETS cmtkUnstable LIBRARY DESTINATION lib ARCHIVE DESTINATION lib COMPONENT development)
+FILE(GLOB files_h "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+FILE(GLOB files_txx "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
+INSTALL(FILES ${files_h} ${files_txx} DESTINATION include/cmtk COMPONENT development)
